syntax = "proto3";

package users;
import "google/protobuf/empty.proto";

enum UserStatus{
    UNKNOW=0;
    OFFLINE=1;
    BUSY=2;
    ONLINE=3;
}

message User{
    int32 id=1;
    string name=2;
    int32 age=3;
    UserStatus status=4;
}

message UserRequest{
    int32 id=1;
}

service Users{
    rpc deleteUser (UserRequest) returns (google.protobuf.Empty);
    rpc getUser (UserRequest) returns (User){};
    rpc getUsers (google.protobuf.Empty) returns (stream User){};
    rpc createUser(stream User) returns (google.protobuf.Empty){};
}